cmake_minimum_required(VERSION 3.17)
project(CPP_Daily_Problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(October_4 October_2020/oct_4.cpp)

add_executable(October_5 October_2020/oct_5.cpp)

add_executable(October_6 October_2020/oct_6.cpp)

add_executable(October_7 October_2020/oct_7.cpp)

add_executable(October_10 October_2020/oct_10.cpp)

add_executable(October_11 October_2020/oct_11.cpp)

add_executable(October_12 October_2020/oct_12.cpp)

add_executable(October_13 October_2020/oct_13.cpp)

add_executable(October_14 October_2020/oct_14.cpp)

