cmake_minimum_required(VERSION 3.17)
project(CPP_Daily_Problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(October_4 October_2020/oct_4.cpp)

add_executable(October_5 October_2020/oct_5.cpp)

add_executable(October_6 October_2020/oct_6.cpp)

add_executable(October_7 October_2020/oct_7.cpp)

add_executable(October_10 October_2020/oct_10.cpp October_2020/oct_25.cpp)

add_executable(October_11 October_2020/oct_11.cpp)

add_executable(October_12 October_2020/oct_12.cpp)

add_executable(October_13 October_2020/oct_13.cpp)

add_executable(October_14 October_2020/oct_14.cpp)

add_executable(October_15 October_2020/oct_15.cpp)

add_executable(October_16 October_2020/Oct_16th/main.cpp October_2020/Oct_16th/Node.cpp)

add_executable(October_17 October_2020/oct_17.cpp)

add_executable(October_18 October_2020/oct_18.cpp)

add_executable(October_19 October_2020/oct_19.cpp)

add_executable(October_20 October_2020/oct_20.cpp)

add_executable(October_21 October_2020/oct_21.cpp)

add_executable(October_22 October_2020/oct_22.cpp)

add_executable(October_23 October_2020/oct_23.cpp)


